--- a/HTML-CSS-JS/index.html
+++ b/HTML-CSS-JS/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="css/layout.css">
     <title>ANASAYFA</title>
   </head>
-  <body style="background-image: url(static/gis_world.jpg);background-repeat: no-repeat;
-  background-size: 100%; color: aliceblue;">
+  <body >
       <div id="header"> 
         <div id="main_title">
           <div class="background">
