--- a/HTML-CSS-JS/cbs_map.html
+++ b/HTML-CSS-JS/cbs_map.html
@@ -450,7 +450,7 @@ class point_object {
       this.summary_katman = document.createElement("summary");
       this.summary_katman.setAttribute("id",this.id_nosu+"_summary")
       document.getElementById("layers_vektor").appendChild(this.details_katman)
-      document.getElementById(this.id_nosu).innerHTML='<button class="haritadagosterme" type="menu" >Haritada Göster</button><button class="haritadagizleme" type="menu" >Haritada Gizle</button><button class="yaklasma" type="menu" onclick=secenek[0]="haritayayaklas">Yaklaş</button><button class="renkdegistirme" type="menu" onclick=secenek[0]="renkdegistir">Renk Değiştir</button><button class="boyutdegistirme" type="menu" onclick=secenek[0]="boyutdegistir">Boyut Değiştir</button><button class="bicimdegistirme" type="menu" onclick=secenek[0]="bicimdegistir">Biçim Değiştir</button><button class="oznitelikbilgi" type="menu" onclick=secenek[0]="ozntelikbilgi">Öznitelikleri Görüntüle ve Düzenle</button>';
+      document.getElementById(this.id_nosu).innerHTML='<button class="haritadagosterme" type="menu" >Haritada Göster</button><button class="haritadagizleme" type="menu" >Haritada Gizle</button><button class="yaklasma" type="menu" >Yaklaş</button><button class="renkdegistirme" type="menu" >Renk Değiştir</button><button class="boyutdegistirme" type="menu" >Boyut Değiştir</button><button class="bicimdegistirme" type="menu" >Biçim Değiştir</button><button class="oznitelikbilgi" type="menu" >Öznitelikleri Görüntüle ve Düzenle</button>';
       document.getElementById(this.id_nosu).appendChild(this.summary_katman)
       document.getElementById(this.id_nosu+"_summary").innerText=this.id_nosu
       document.getElementById(this.id_nosu+"_summary").style.listStyle="none";
@@ -460,10 +460,42 @@ class point_object {
       document.getElementById(this.id_nosu+"_summary").style.cursor="pointer"
       document.getElementById(this.id_nosu+"_summary").style.listStyle="none"
       //butonlar
-      document.getElementById(this.id_nosu).getElementsByTagName("button")[0].setAttribute('onclick',"haritayaeklemeislevi('"+this.id_nosu+"')")
-      document.getElementById(this.id_nosu).getElementsByTagName("button")[1].setAttribute('onclick',"haritadagizleme('"+this.id_nosu+"')")
+      document.getElementById(this.id_nosu).getElementsByTagName("button")[0].setAttribute('onclick',"haritayaeklemeislevi('"+this.id_nosu+"')");
+      document.getElementById(this.id_nosu).getElementsByTagName("button")[1].setAttribute('onclick',"haritadagizleme('"+this.id_nosu+"')");
+      document.getElementById(this.id_nosu).getElementsByTagName("button")[2].setAttribute('onclick',"objeyeyaklas('"+this.id_nosu+"')")
+      document.getElementById(this.id_nosu).getElementsByTagName("button")[3].setAttribute('onclick',"renkdegistir('"+this.id_nosu+"')")
     }
   }
+function renkdegistir(i){
+  var form_element=document.createElement("form")
+  form_element.setAttribute("class","formelementi")
+  var label_element=document.createElement("label")
+  label_element.setAttribute("for","favcolor")
+  label_element.innerText="Rengi Seçiniz"
+  var renksecici=document.createElement("input")
+  renksecici.setAttribute("id","favcolor")
+  renksecici.setAttribute("type","color")
+  renksecici.setAttribute("name","favcolor")
+  renksecici.setAttribute("value","#000000")
+  var renkalma = document.createElement("button")
+  renkalma.setAttribute("type","submit")
+  renkalma.setAttribute("value","Değiştir")
+  renkalma.setAttribute("onclick","rengialma('"+i+"')")
+  document.getElementById(i).getElementsByTagName("button")[3].innerHTML=""
+  document.getElementById(i).getElementsByTagName("button")[3].appendChild(form_element)
+  //document.getElementById(i).getElementsByTagName("button")[3].innerHTML='<form><label for="favcolor">Rengi Seçiniz:</label><input type="color" id="favcolor" name="favcolor" value="#000000"><input type="submit" value="Değiştir"></form>'
+  // document.getElementById(i).getElementsByTagName("button")[3].getElementsByClassName("formelementi").appendChild(label_element)
+  // document.getElementById(i).getElementsByTagName("button")[3].getElementsByClassName("formelementi").appendChild(renksecici)
+  // document.getElementById(i).getElementsByTagName("button")[3].getElementsByClassName("formelementi").appendChild(renkalma)
+  document.getElementById(i).getElementsByTagName("button")[3].getElementsByClassName("formelementi")[0].appendChild(label_element)
+  document.getElementById(i).getElementsByTagName("button")[3].getElementsByClassName("formelementi")[0].appendChild(renksecici)
+  document.getElementById(i).getElementsByTagName("button")[3].getElementsByClassName("formelementi")[0].appendChild(renkalma)
+  console.log(document.getElementById(i).getElementsByTagName("button")[3].getElementsByClassName("formelementi")[0])
+}
+function rengialma(i){
+  console.log(document.getElementById(i).getElementsByTagName("button")[3].getElementsByTagName("button"))
+}
+
 function  haritayaeklemeislevi(i){
     for (b in point_listesi){
       if (point_listesi[b].id_nosu===i){
@@ -475,7 +507,6 @@ function  haritayaeklemeislevi(i){
     }
     }
 function  haritadagizleme(i){
-
     for (b in point_listesi){
       if (point_listesi[b].id_nosu===i){
         map.removeLayer(point_listesi[b].layer)
@@ -485,6 +516,16 @@ function  haritadagizleme(i){
       }
     }
     }
+function objeyeyaklas(i){
+  for (b in point_listesi){
+      if (point_listesi[b].id_nosu===i){
+        map.fitBounds(point_listesi[b].layer.getBounds())
+      }
+      else{
+        continue
+      }
+    }
+}
 var x
 var y
 var point
