--- a/HTML-CSS-JS/deneme.html
+++ b/HTML-CSS-JS/deneme.html
@@ -24,84 +24,39 @@
 <script src="js/leaflet-providers.js"></script>
 <script>
 
-function range(start, end) {
-  return Array.from({ length: end - start + 1 }, (_, i) => i)
-}
 
-var min_x = 36.48291208
-var max_x =63.51708792
-
-var i
-const resolutions_epsg2320 = [((max_x-min_x)/256)]
-for (i in range(1,17)){
-    var cozunurluk = resolutions_epsg2320[i]/2
-    resolutions_epsg2320.push(cozunurluk)
-}
-
-var kose1 = L.latLng(31.7255037522,43.0736429052)
-var kose2 = L.latLng(35.2142040312,51.755659549)
-var bounds = L.latLngBounds(kose1, kose2);
-
-//from https://epsg.io/2320;
-//Center coordinates
-//-766397.04 6050171.84
-//Projected bounds:
-//-3202726.46 4669275.42
-//557218.62 7904921.43
-//WGS84 bounds:
-//-9.56 34.88
-//31.59 71.21
-
-// def epsg 2320 with proj4
-var epsg_2320 = new L.Proj.CRS (
-    "EPSG:2320",
-    "+proj=tmerc +lat_0=0 +lon_0=30 +k=1 +x_0=500000 +y_0=0 +ellps=intl +units=m +no_defs",
+var crs = new L.Proj.CRS('EPSG:5181',
+    '+proj=tmerc +lat_0=38 +lon_0=127 +k=1 +x_0=200000 +y_0=500000 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs',
     {
-        resolutions : resolutions_epsg2320,
-        origin : [0,0],
-        bounds : L.latLngBounds([36.48291208, 	39.921961302],[63.51708792, 	46.6391616543])
-}
-)
-var guneybati = L.latLng(36.48291208, 	39.921961302)
-var northEast = L.latLng(63.51708792, 	46.6391616543)
-var bounds_s = L.Bounds([36.48291208, 	39.921961302],[63.51708792, 	46.6391616543]);
-console.log(L.latLngBounds([36.48291208, 	39.921961302],[63.51708792, 	46.6391616543]))
+		resolutions: [2048, 1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1, 0.5, 0.25],
+		origin: [-30000, -60000],
+		bounds: L.bounds([-30000, -60000], [494288, 464288])
+    }),
+	map = L.map('map', {
+		crs: crs,
+		continuousWorld: true,
+		worldCopyJump: false,
+	});
 
-var layer =L.tileLayer('https://api.geosition.com/tile/osm-bright-3006/{z}/{x}/{y}.png', {
-	maxZoom: epsg_2320.options.resolutions.length,
-    continuousWorld: true,
-    worldCopyJump: false,
-    crs: epsg_2320,
-	attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap contributors</a>, Imagery &copy; <a href="http://www.kartena.se/">Kartena</a>',
-})
-console.log(layer)
-// map options
-var mapoptions = {
-    center : [31.7255037522,43.0736429052],
-    zoom : 1,
-    maxZoom: epsg_2320.options.resolutions.length,
-    continuousWorld: true,
-    worldCopyJump: false,
-    crs: epsg_2320,
-    layers : [layer]
-};
+new L.TileLayer('http://i{s}.maps.daum-img.net/map/image/G03/i/1.20/L{z}/{y}/{x}.png', {
+	maxZoom: 14,
+	minZoom: 0,
+	zoomReverse: true,
+	subdomains: '0123',
+	continuousWorld: true,
+	attribution: 'ⓒ Daum',
+	tms: true
+}).addTo(map);
 
-//map scren on map_cbs div
-var map = L.map('map',
-    mapoptions,
-    
-  );
-// convert x y from latlng for epsg 2320
-var bngprojection = "+proj=tmerc +lat_0=0 +lon_0=30 +k=1 +x_0=500000 +y_0=0 +ellps=intl +units=m +no_defs"
+//Gunsan Airport
+new L.marker([35.925937, 126.615810]).addTo(map);
+
+map.setView([36.0, 127.0], 0);
+var bngprojection = "+proj=tmerc +lat_0=38 +lon_0=127 +k=1 +x_0=200000 +y_0=500000 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs"
 map.on('mousemove' , (e) =>{
         var latlng = e.latlng;
-        var bngcoords = proj4(bngprojection, [ latlng.lat,latlng.lng]);
+        var bngcoords = proj4(bngprojection, [ latlng.lng,latlng.lat]);
         document.getElementById('coordinat_tab').innerText ="Enlem:"+(e.latlng.lat).toFixed(8) +"------"+ "Boylam:"+(e.latlng.lng).toFixed(8)+"\n"
-        + "X:-----"+bngcoords[0]+"------Y:-----"+bngcoords[1];
+        + "X:.......|"+bngcoords[0]+"|           .......Y:.......|"+bngcoords[1]+"|";
        });
-//tilelayer
-
-
-//map setview
-
 </script>
