--- a/HTML-CSS-JS/asd.html
+++ b/HTML-CSS-JS/asd.html
@@ -22,6 +22,9 @@
 <script src="PROJ4LEAFLET/src/proj4leaflet.js"></script>
 <script src="PROJ4LEAFLET/proj4-compressed.js"></script>
 <script src="js/leaflet-providers.js"></script>
+<script src="https://unpkg.com/esri-leaflet@3.0.8/dist/esri-leaflet.js"
+integrity="sha512-E0DKVahIg0p1UHR2Kf9NX7x7TUewJb30mxkxEm2qOYTVJObgsAGpEol9F6iK6oefCbkJiA4/i6fnTHzM6H1kEA=="
+crossorigin=""></script>
 
 
 <script>
@@ -49,8 +52,7 @@ function range(start, end) {
   return Array.from({ length: end - start + 1 }, (_, i) => i)
 };
 
-const origin = [38066.8071289063 ,3842467.31384277];
-const resolutions_epsg2320 = [(origin[1]-origin[0])/256];
+const resolutions_epsg2320 = [14687.28546875];
 var i;
 for (i in range(1,17)){
     var cozunurluk = resolutions_epsg2320[i]/2;
@@ -61,28 +63,21 @@ var epsg_2320 = new L.Proj.CRS (
     "EPSG:2320",
     "+proj=tmerc +lat_0=0 +lon_0=30 +k=1 +x_0=500000 +y_0=0 +ellps=intl +towgs84=-87,-98,-121,0,0,0,0 +units=m +no_defs ", 
     {   resolutions: resolutions_epsg2320,
-        origin:[38066.8071289063,3842467.31384277],
-        bounds: L.bounds([38066.8071289063	, 3842467.31384277  ], [1837237.07208252, 5056907.24249268])
+        origin:[-3202726.46,4669275.42],
          }
     );
-console.log(epsg_2320.options.origin)
 var map = L.map('map',{
-    crs : epsg_2320,
+    crs:epsg_2320,
     center : [35,38],
-    zoom: 7,
+    zoom: 0,
     continuousWorld: true,
     worldCopyJump: false,
-    resolutions : resolutions_epsg2320
   });
 
-  var googlestreets =L.tileLayer('http://{s}.google.com/vt/lyrs=m&x={x}&y={y}&z={z}',{
-      maxZoom: 20,
-      subdomains:['mt0','mt1','mt2','mt3'],
-      crs:epsg_2320,
-      resolutions:resolutions_epsg2320
-   });
-   googlestreets.addTo(map)
-
+ var tilelayer =  L.esri.tiledMapLayer({
+  url: "https://services.arcgisonline.com/arcgis/rest/services/NatGeo_World_Map/MapServer",
+  tileSize:256,
+}).addTo(map);
 
 var bngprojection = "+proj=tmerc +lat_0=0 +lon_0=30 +k=1 +x_0=500000 +y_0=0 +ellps=intl +towgs84=-87,-98,-121,0,0,0,0 +units=m +no_defs "
 map.on('mousemove' , (e) =>{
