--- a/HTML-CSS-JS/deneme.html
+++ b/HTML-CSS-JS/deneme.html
@@ -33,20 +33,15 @@ var crs = new L.Proj.CRS('EPSG:5181',
 		bounds: L.bounds([-30000, -60000], [494288, 464288])
     }),
 	map = L.map('map', {
-		crs: crs,
 		continuousWorld: true,
 		worldCopyJump: false,
 	});
 
-new L.TileLayer('http://i{s}.maps.daum-img.net/map/image/G03/i/1.20/L{z}/{y}/{x}.png', {
-	maxZoom: 14,
-	minZoom: 0,
-	zoomReverse: true,
-	subdomains: '0123',
-	continuousWorld: true,
-	attribution: 'ⓒ Daum',
-	tms: true
-}).addTo(map);
+    var googlestreets =L.tileLayer('https://mts1.google.com/vt/lyrs=s@186112443&hl=x-local&src=app&x={x}&y={y}&z={z}&s=Galile',{
+      maxZoom: 20,
+   });
+   googlestreets.addTo(map)
+
 
 //Gunsan Airport
 new L.marker([35.925937, 126.615810]).addTo(map);
