geliştirmeler devam (multi point)

--- a/HTML-CSS-JS/cbs_map.html
+++ b/HTML-CSS-JS/cbs_map.html
@@ -136,6 +136,10 @@ async function baslangic(){
   show_coordints()
 }
 
+async function sureli_bekletme(x){
+  var asd = x
+  await sleep(asd)
+}
 
 
 // Fetch all the details element. // üst sekmelerden birini açınca diğerinin kapanması
