--- a/HTML-CSS-JS/cbs_map.html
+++ b/HTML-CSS-JS/cbs_map.html
@@ -19,8 +19,8 @@
           <button type="menu" id="go_homepage">
           </button></a>
           <details id="create_object"><summary style="font-size: small; list-style: none;padding: 5px;font-weight: bold;">Obje Oluştur</summary>
-            <button class="button" type="menu" onclick="create_point()">Nokta</button>
-            <button class="button" type="menu" onclick="multi_create_point()">Çoklu Nokta</button>
+            <button class="button" type="menu" onclick="katman_adi_olusturma('createpoint')">Nokta</button>
+            <button class="button" type="menu" onclick="katman_adi_olusturma('createmultipoint')">Çoklu Nokta</button>
             <button class="button"type="menu">Çizgi</button>
             <button class="button" type="menu">Çokgen</button></details>
           <details id="up_data"><summary style="font-size: small; list-style: none;padding: 5px;font-weight: bold;" >Vektör Veri Yükle</summary>
